# led-matrix-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
examples/: image_viewer.rs  minimal.rs  pulsing.rs  video_player.rs
scripts/: deploy.sh  led-matrix.service  preprocess_video.sh  setup-hooks.sh  stream-video.py
site/: index.html  install.sh
src/: lib.rs  main.rs  media.rs  render.rs  server.rs
videos/: CREDITS.md
